--- a/covid-19-data/package.json
+++ b/covid-19-data/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mdi/js": "^5.5.55",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@mdi/react": "^1.4.0",
     "gh-pages": "^2.2.0"
   }
 }
